gibbon-compiler/examples/should_fail/Fail1.hs
module Fail1 where

id :: a -> a
id x = 10
